# accel-ppp

./: 0001-ssl-Update-depricated-OpenSSL-calls.patch  CHANGELOG.md  CMakeLists.txt  CONTRIBUTING.md  INSTALL.debian.md  README  README.md  config.h.in  version.h.in
.github/workflows/: build-and-run.yml  run-tests-32bit.yml  run-tests-asan-ubsan.yml  run-tests-bigendian.yml  run-tests.yml
accel-cmd/: CMakeLists.txt
accel-pppd/: CMakeLists.txt  accel-ppp.conf  accel-ppp.conf.5  accel_iputils.c  ap_session_hooks.c  ifcfg.c  ipdb.c  iprange.c  log.c  log.h  main.c  memdebug.c  net.c  session.c  utils.c  utils.h
accel-pppd/auth/: CMakeLists.txt  auth_chap_md5.c  auth_mschap_v1.c  auth_mschap_v2.c  auth_pap.c
accel-pppd/backup/: CMakeLists.txt
accel-pppd/cli/: cli.c  cli.h  cli_p.h  log_stream.c  show_sessions.c  std_cmd.c  tcp.c  telnet.c
accel-pppd/ctrl/ipoe/: CMakeLists.txt  arp.c  dhcpv4.c  dhcpv4.h  dhcpv4_options.c  ipoe.c  ipoe.h  ipoe_netlink.c  ipoe_netlink_link_monitor.c  lua.c
accel-pppd/ctrl/l2tp/: CMakeLists.txt  l2tp.c  l2tp.h  packet.c
accel-pppd/ctrl/pppoe/: CMakeLists.txt  cli.c  disc.c  dpado.c  mac_filter.c  pppoe.c  pppoe.h
accel-pppd/ctrl/pptp/: CMakeLists.txt  pptp.c  pptp.h
accel-pppd/ctrl/sstp/: CMakeLists.txt  sstp.c  sstp.h
accel-pppd/extra/: CMakeLists.txt  bitpool.h  bitpool_test.c  chap-secrets.c  connlimit.c  ippool.c  ipv6pool.c  logwtmp.c  metrics.c  pppd_compat.c
accel-pppd/extra/net-snmp/: CMakeLists.txt  sessionTable.h  statCore.c  statIPOE.c  statL2TP.c  statPPP.c  statPPPOE.c  statPPTP.c  statSSTP.c
accel-pppd/include/: accel_iputils.h  ap_net.h  ap_session.h  ap_session_hooks.h  new_link_event.h  nftables_set.h  vlan_mon.h
accel-pppd/ipv6/: CMakeLists.txt  dhcpv6.c  dhcpv6.h  dhcpv6_packet.c  nd.c  ppp_ipv6layer.c  ppp_ipv6layer.h
accel-pppd/libnetlink/: iputils.c  iputils.h  libnetlink.c  libnetlink.h  new_link_event.c  nftables_set.c  nftables_set.h  rt_names.c  rt_names.h
accel-pppd/logs/: CMakeLists.txt  log_file.c  log_syslog.c  log_tcp.c
accel-pppd/lua/: CMakeLists.txt
accel-pppd/ppp/: ccp_mppe.c  ipcp_opt_dns.c  ipcp_opt_ipaddr.c  ipcp_opt_wins.c  ipv6cp_opt_intfid.c  lcp_opt_accomp.c  lcp_opt_mru.c  lcp_opt_pcomp.c  ppp.c  ppp.h  ppp_auth.c  ppp_ccp.c  ppp_fsm.c  ppp_ipcp.c  ppp_ipv6cp.c  ppp_lcp.c
accel-pppd/radius/: CMakeLists.txt  acct.c  attr_defs.h  auth.c  dict.c  dm_coa.c  packet.c  radius.c  radius.h  radius_p.h  req.c  serv.c
accel-pppd/radius/dict/: dictionary  dictionary.accel
accel-pppd/shaper/: CMakeLists.txt  adv_shaper.c  leaf_qdisc.c  limiter.c  shaper.c  shaper.h
accel-pppd/triton/: CMakeLists.txt  conf_file.c  event.c  list.h  md.c  mempool.c  mempool.h  timer.c  triton.c  triton.h  triton_p.h
accel-pppd/vlan-mon/: CMakeLists.txt  vlan_mon.c
cmake/: cpack.cmake
contrib/: accel-ppp.service
crypto/: CMakeLists.txt  crypto.h
docs/: ipoe_radius.md  logs_streaming.md  pppoe_radius.md
drivers/dkms/ipoe/: src
drivers/dkms/ipoe/debian/: accel-ppp-ipoe-dkms.dkms  changelog  control  rules
drivers/dkms/vlan_mon/: README.md  src
drivers/dkms/vlan_mon/debian/: accel-ppp-vlan-mon-dkms.dkms  changelog  control  rules
drivers/ipoe/: CMakeLists.txt  ipoe.c  ipoe.h
drivers/vlan_mon/: CMakeLists.txt  Makefile  vlan_mon.c
tests/: README.md  conftest.py
tests/accel-cmd/: test_log_streaming.py
tests/accel-pppd/general/: test_basic.py  test_metrics.py  test_pcre_negative_cases.py
tests/accel-pppd/ipoe/: conftest.py
tests/accel-pppd/ipoe/dhcpv4/: test_ipoe_shared_session_chap_secrets.py  test_ipoe_shared_session_lua_chap_secrets.py  test_ipoe_shared_session_wo_auth.py
tests/accel-pppd/pppoe/: conftest.py  test_pppoe_disc.py  test_pppoe_pado_delay.py  test_pppoe_session_chap_secrets.py  test_pppoe_session_wo_auth.py  test_pppoe_vlan_mon.py
tests/unit/: Makefile  README.md  test_utils_regex  test_utils_regex.c
tests/unit/stubs/: log.h  log_stubs.c  memdebug.h  triton.h
